Bug fix to recipe card h2 text overflow

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -89,6 +89,7 @@
 }
 
 .recipe-card h2 {
+    max-width: 250px;
     font-size: 1.2rem;
     white-space: nowrap;
     text-overflow: ellipsis;
